2003-06-09  Bradley Bell  <btb@icculus.org>

	* include/libmve.h, libmve/mve_main.c, libmve/mvelib.c,
	libmve/mvelib.h, libmve/mveplay.c, main/movie.c: merged libmve
	from physfs branch

2003-06-07  Taylor Richards  <taylor@icculus.org>

	* libmve/mvelib.c, libmve/mveplay.c: stop memory leaks in libmve

2003-06-07  Bradley Bell  <btb@icculus.org>

	* main/console.c: fix non-console build

	* main/gamesave.c: comments

	* main/bm.c: remove redundant break

2003-06-06  Bradley Bell  <btb@icculus.org>

	* main/gauges.c, main/kconfig.c: comments/formatting

	* console/.cvsignore: added .cvsignore

	* main/console.c: can't write to console after it's closed

2003-06-05  Bradley Bell  <btb@icculus.org>

	* arch/sdl/event.c, console/CON_console.c, console/Makefile.am,
	console/internal.c, console/internal.h, include/CON_console.h,
	include/console.h, main/console.c, main/gamecntl.c, main/hud.c:
	finish console conversion away from SDL

2003-06-04  Bradley Bell  <btb@icculus.org>

	* console/CON_console.c, include/CON.console.h, include/console.h,
	main/console.c, main/game.c: console conversion to native gr,
	console resizing

	* include/gr.h, main/credits.c, main/kconfig.c, main/newmenu.c:
	put prototype for gr_bm_bitblt in gr.h

2003-06-03  Bradley Bell  <btb@icculus.org>

	* console/CON_console.c, console/DT_drawtext.c,
	console/Makefile.am, include/CON_console.h, include/DT_drawtext.h,
	main/console.c: use native fonts for console

	* main/playsave.c: use shorts for short data

2003-06-02  Bradley Bell  <btb@icculus.org>

	* configure.ac, main/console.c: set console background, fix
	whitespace

2003-06-01  Bradley Bell  <btb@icculus.org>

	* Makefile.am, arch/sdl/event.c, configure.ac,
	console/CON_console.c, console/DT_drawtext.c, console/Makefile.am,
	console/internal.c, include/CON_console.h, include/DT_drawtext.h,
	include/console.h, main/console.c, main/game.c, main/gamecntl.c,
	main/gamerend.c: added console code (from SDL_console)
